<resources>
    <string name="app_name">ITRevolutionHackaton</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="facebook_app_id">372636583178030</string>

    <string name="alcohol_in_blood">Alcohol in blood</string>
    <string name="drunk_beverages">Drunk beverages</string>
    <string name="hours_left">%1$s hours left</string>
    <string name="less_than_hour_left">Less than hour left</string>
    <string name="you_are_sober">You are sober</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile_photo">Profile photo</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weightInKg">Weight (kg)</string>
    <string name="save">Save</string>
    <string name="error_empty_field">Cannot be empty</string>
    <string name="error_error">Error</string>
    <string name="error_date_format">Enter date in format DD/mm/yyyy</string>
    <string name="error_zero_or_less">Cannot be zero or less</string>
    <string name="value_milligrams">Value (ml)</string>
    <string name="alcohol_in_percent">Alcohol (%)</string>
    <string name="error_wrong_alcohol_type_selected_too_much">Wrong alcohol type selected (too much alc %)</string>
    <string name="error_wrong_alcohol_type_selected_too_less">Wrong alcohol type selected (too less alc %)</string>

    <string name="kvas">Kvas</string>
    <string name="beer_light">Beer light</string>
    <string name="beer_dark">Beer dark</string>
    <string name="vine">Vine</string>
    <string name="tincture">Tincture</string>
    <string name="liquor">Liquor</string>
    <string name="vodka">Vodka</string>
    <string name="tequila">Tequila</string>
    <string name="brandy">Brandy</string>
    <string name="whiskey_light">Whiskey light</string>
    <string name="whiskey_medium">Whiskey medium</string>
    <string name="whiskey_hard">Whiskey hard</string>
    <string name="rum">Rum</string>
    <string name="absinthe">Absinthe</string>
    <string name="other">Other</string>

    <string name="fingerprint_auth">Fingerprint auth</string>
    <string name="fingerprint_message">Place your fingertip on the Home button to verify your identity</string>
    <string name="fignerprint_failed">Failed</string>
    <string name="logout">Logout</string>
    <string name="fingerprint_no_scans">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="use_fingerprint">Use fingerprint</string>

    <string-array name="drink_types">
        <item>@string/kvas</item>
        <item>@string/beer_light</item>
        <item>@string/beer_dark</item>
        <item>@string/vine</item>
        <item>@string/tincture</item>
        <item>@string/liquor</item>
        <item>@string/vodka</item>
        <item>@string/tequila</item>
        <item>@string/brandy</item>
        <item>@string/whiskey_light</item>
        <item>@string/whiskey_medium</item>
        <item>@string/whiskey_hard</item>
        <item>@string/rum</item>
        <item>@string/absinthe</item>
        <item>@string/other</item>
    </string-array>
</resources>
